# recli

./: .gitignore  Cargo.toml  README.md  recli.md  recli_roadmap.md
docs/: GAP-ANALYSIS.md  SCHEMA.md
src/: cli.rs  command_detector.rs  command_log.rs  error.rs  io.rs  lib.rs  logging_pty.rs  main.rs  pty.rs  session.rs
src.bak/: cli.rs  command_detector.rs  command_log.rs  config.rs  io.rs  lib.rs  logging_pty.rs  main.rs  pty.rs  session.rs
src.bak/util/: mod.rs  retry.rs  telemetry.rs
src/schema/: log_event.rs  mod.rs  validation.rs
