[package]
name = "recli"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
portable-pty = "0.8"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
time-format = "1.2.0"
chrono = "0.4"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
hostname = "0.3"
