[package]
name = "recli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
azure_data_cosmos = "0.20"
azure_core = "0.20"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = "1"
hostname = "0.4"